Fix button spacing

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -75,7 +75,7 @@ body.home {
       @include pe-responsive-breakpoint(md) {
         position: absolute;
         top: 0;
-        bottom: 0;
+        bottom: 40px;
         right: 0;
 
         padding: 0 60px;
